fixed the tags-filtering dialog not showing up when the bookings list was too long

--- a/src/app/components/tags-filter-dialog/tags-filter-dialog.component.css
+++ b/src/app/components/tags-filter-dialog/tags-filter-dialog.component.css
@@ -8,9 +8,6 @@
     border-radius: 9px;
     border-color: rgb(220, 195, 162);
     font-size: medium;
-    position:fixed;
-    margin-top: -10%;
-    margin-right: 50%;
 }
 
 #cancel-button, #submit-button{
